2024-12-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  support/regression/tests/structinit.c.in,
	  .version:
	  struct / union in initializer, RFE #901.

2024-12-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Enable use of ldir for r2k and r2ka in a few cases that are not affected by the wait-state bug.
	* src/z80/gen.c:
	  Improve Rabbit negation codegen.
	* support/regression/tests/sieve.c:
	  Regression test based on historic Byte magazine sieve of Eratosthenes benchmark.

2024-12-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s:
	  Fix comment in Rabbit startup code.

2024-12-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/README.txt:
	  Fix some links in documentation.

2024-12-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* sim/ucsim/src/sims/f8.src/decode.h,
	  sim/ucsim/src/sims/f8.src/f8cl.h,
	  sim/ucsim/src/sims/f8.src/glob.cc,
	  sim/ucsim/src/sims/f8.src/imove.cc:
	  Fixes for f8 ldw instruction simulation.
	* src/f8/gen.c:
	  Improve use of ldw instructions in f8 codegen.

2024-12-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fix bug #3807.
	* support/regression/tests/rabbit.c:
	  Rabbit cipher regression test.
	* src/f8/gen.c:
	  Improve f8 addition codegen.
	* sdas/asf8/f8mch.c:
	  Assembler support for ldw x, (y) f8 instruction.

2024-12-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/typeof_retfptr.c:
	  Test for a function pointer idiom becoming popular with C23.
	* src/mcs51/gen.c,
	  src/hc08/gen.c:
	  Make mcs51, hc08 and s08 list --i-code-in-asm list ic->key prominently, instead of ic->seq (ic->key is more useful for debugging, and used by all other ports).
	* src/SDCCgenconstprop.cc:
	  Fix bug #3806.
	* src/f8/gen.c:
	  Improve f8 codegen.
	* src/f8/peeph.def:
	  Optimize out f8 pop(w)/push(w) pairs.
